--- a/PUBLIC/contact.html
+++ b/PUBLIC/contact.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
-    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <!--script(type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js")-->
   </head>
   <body id="contact-page">
     <div id="load">
@@ -187,11 +187,10 @@
     <script src="/js/jquery-3.1.1.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/index.js"></script>
-    <script type="text/javascript">
-      (function(){
-          emailjs.init("user_XCkhVus3oPZ9xf2vCeLjH");
-      })();
-    </script>
-    <script src="/js/emailjs.js"></script>
+    <!--script(type="text/javascript").-->
+    <!--    (function(){-->
+    <!--        emailjs.init("user_XCkhVus3oPZ9xf2vCeLjH");-->
+    <!--    })();-->
+    <!--script(src="/js/emailjs.js")-->
   </body>
 </html>
