--- a/PUBLIC/index.html
+++ b/PUBLIC/index.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
-    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <!--script(type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js")-->
   </head>
   <body>
     <div id="load">
@@ -86,56 +86,40 @@
     <section id="who-are-we">
       <div class="container">
         <div class="row">
-          <div class="col-sm-5">
+          <div class="center-block text-center">
             <div class="title-section">
               <h2 data-lang="whoarewe.title">Who are we?</h2>
             </div>
           </div>
         </div>
-        <div class="pad-top-20">
-          <div class="panel panel-default panel-who-are-we">
-            <div class="panel-body">
-              <div class="row">
-                <div class="col-sm-6 who-text">
-                  <p data-lang="whoarewe.text1">Üaiki Global Initiative es organizacion de beneficio social fundada en la ciudad de Cambridge, Massachussets, por emprendedores con raises provenientes de distintas partes del globo.</p>
-                </div>
-                <div class="col-sm-6 image-full"><img src="img/who1.jpg" width="100%"></div>
+        <div class="panel panel-default panel-who-are-we">
+          <div class="panel-body">
+            <div class="row">
+              <div class="col-sm-6 who-text align-middle">
+                <p data-lang="whoarewe.text1">Üaiki Global Initiative es organizacion de beneficio social fundada en la ciudad de Cambridge, Massachussets, por emprendedores con raises provenientes de distintas partes del globo.</p>
               </div>
-              <div class="row">
-                <div class="col-sm-6 image-full"><img src="img/who2.jpg" width="100%"></div>
-                <div class="col-sm-6 who-text">
-                  <p data-lang="whoarewe.text2">ÜGI usa el desarrollo tecnologico para conectarse con las comunidades más compromeditas del planeta. Confiamos que el acceso a informacion y educacion de calidad sera clave en el surgimiento millones de personas que hasta el dia de hoy viven completamente marginadas.</p>
-                </div>
+              <div class="col-sm-6 image-full"><img src="img/who1.jpg" width="100%"></div>
+            </div>
+            <div class="row">
+              <div class="col-sm-6 image-full"><img src="img/who2.jpg" width="100%"></div>
+              <div class="col-sm-6 who-text align-middle">
+                <p data-lang="whoarewe.text2">ÜGI usa el desarrollo tecnologico para conectarse con las comunidades más compromeditas del planeta. Confiamos que el acceso a informacion y educacion de calidad sera clave en el surgimiento millones de personas que hasta el dia de hoy viven completamente marginadas.</p>
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <section id="subscribe-newsletter">
+    <section id="volunteer">
       <div class="container">
-        <div class="row">
-          <div class="col-sm-12"></div>
-        </div>
-        <h2 class="text-center" data-lang="newsletter.title">STAY INFORMED. SUBSCRIBE TO OUR NEWSLETTER</h2>
-        <form class="form" id="subscribe-newsletter-form" method="post">
-          <div class="row">
-            <div class="col-sm-8 col-sm-push-2 col-md-6 col-md-push-3 form-group">
-              <input class="form-control" id="email-newsletter" type="email" name="email" placeholder="E-mail">
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-sm-8 col-sm-push-2 col-md-6 col-md-push-3 form-group text-center">
-              <button class="btn btn-subscribe btn-block-xs" id="button-newsletter" type="submit" data-lang="newsletter.button">Subscribe</button>
-            </div>
-          </div>
-        </form>
+        <h4 class="text-center" data-lang="volunteer.title">Volunteer / Intern and Career</h4>
+        <p class="text-center"><span data-lang="volunteer.text-before"> We offer opportunities for people that want to create real impact [</span><a href="#" data-toggle="modal" data-target="#volunteer-modal" data-lang="volunteer.link">Click here</a><span data-lang="volunteer.text-after"> ] for contact usv    </span></p>
       </div>
     </section>
     <section id="our-strategy">
       <div class="container">
         <div class="row">
-          <div class="col-sm-5">
+          <div class="center-block text-center">
             <div class="title-section">
               <h2 data-lang="strategy.title">Our Strategy</h2>
             </div>
@@ -182,7 +166,7 @@
         <div class="row pad-top-40">
           <div class="col-sm-12">
             <div class="embed-responsive embed-responsive-16by9">
-              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/bAMNErzPrQA" width="100%" height="inherit"></iframe>
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/c-ANLSHcyhM" width="100%" height="inherit"></iframe>
             </div>
           </div>
         </div>
@@ -237,7 +221,7 @@
     <section class="pad-top-20" id="benefits">
       <div class="container">
         <div class="row">
-          <div class="col-sm-5">
+          <div class="center-block text-center">
             <div class="title-section">
               <h2 data-lang="benefits.title">Benefist</h2>
             </div>
@@ -270,7 +254,7 @@
     <section class="pad-top-20" id="partnerships">
       <div class="container">
         <div class="row">
-          <div class="col-sm-5">
+          <div class="center-block text-center">
             <div class="title-section">
               <h2 data-lang="partnerships.title">Partnerships</h2>
             </div>
@@ -291,12 +275,6 @@
             </div>
           </div>
         </div>
-      </div>
-    </section>
-    <section id="volunteer">
-      <div class="container">
-        <h4 class="text-center" data-lang="volunteer.title">Volunteer / Intern and Career</h4>
-        <p class="text-center"><span data-lang="volunteer.text-before"> We offer opportunities for people that want to create real impact [</span><a href="#" data-toggle="modal" data-target="#volunteer-modal" data-lang="volunteer.link">Click here</a><span data-lang="volunteer.text-after"> ] for contact us</span></p>
       </div>
     </section>
     <footer class="footer">
@@ -386,11 +364,10 @@
     <script src="/js/jquery-3.1.1.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/index.js"></script>
-    <script type="text/javascript">
-      (function(){
-          emailjs.init("user_XCkhVus3oPZ9xf2vCeLjH");
-      })();
-    </script>
-    <script src="/js/emailjs.js"></script>
+    <!--script(type="text/javascript").-->
+    <!--    (function(){-->
+    <!--        emailjs.init("user_XCkhVus3oPZ9xf2vCeLjH");-->
+    <!--    })();-->
+    <!--script(src="/js/emailjs.js")-->
   </body>
 </html>
